added the style for the home button

--- a/src/index.css
+++ b/src/index.css
@@ -149,6 +149,16 @@ body {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   
 }
+#home{
+  background-color: rgb(57, 73, 89);
+  padding: 5px 10px;
+  border-radius: 20px;
+  text-decoration: none;
+  color: white;
+  margin: 20px ;
+  display: block;
+  width: fit-content;
+}
 
 .container{
   background-color: white;
